templates/namespace-template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-REPLACE
  labels:
    provisioncertificate: "yes"
